--- a/public/index.html
+++ b/public/index.html
@@ -218,9 +218,9 @@
     <p>Hello! I'm a second-year PhD student advised by <a href="https://baulab.info/">David Bau</a> and <a href="https://www.byronwallace.com/">Byron Wallace</a>
     at Northeastern University. Before that, I completed my B.S. in Computer Science at Brown University, where I worked with <a href="https://cs.brown.edu/people/epavlick/">Ellie Pavlick</a>
     in the <a href="https://lunar.cs.brown.edu/">LUNAR Lab</a>.</p>
-    <p>I'm interested in interpretability with the goal of understanding language/meaning. 
-        
-        What kinds of representations are neural language models actually learning? How do language models structure meaning, and how can this inform our assumptions of the nature of thought?
+    <p>I do mechanistic interpretability with the goal of understanding how language models represent concepts.
+        How do LLMs represent the meaningful parts of language? What kinds of representations do they learn? 
+        To what extent do they grasp the structure of human language, and how can this inform basic assumptions of how language works? 
         Check out my <a href="https://scholar.google.com/citations?user=4EobJQIAAAAJ&hl=en&oi=sra">Google Scholar</a> page 
         to see an up-to-date list of my work so far.  </p>
 
@@ -231,7 +231,7 @@
     <p>Email me at: <tt>feucht.s[at]northeastern.edu</tt></p>
 
     <br> 
-    <i><a href="/headphones">What's in my headphones:</a></i>  <a href="https://www.youtube.com/watch?v=WMDWPH4oKwo">Type Slowly - Pavement</a> and <a href="https://www.youtube.com/watch?v=K14qg9E9SoE">Slowly Typed - Pavement</a>
+    <i><a href="/headphones">What's in my headphones:</a></i> <a href="https://www.youtube.com/watch?v=WMDWPH4oKwo">Type Slowly - Pavement</a> & <a href="https://www.youtube.com/watch?v=K14qg9E9SoE">Slowly Typed - Pavement</a>
 
     </div>
 
