--- a/public/headphones/index.html
+++ b/public/headphones/index.html
@@ -25,8 +25,9 @@ A meandering list of tunes and tracks that I enjoy, updated ~monthly.
 [07/2024] Ventura Highway - America
 [08/2024] Out on the Weekend - Neil Young
 [09/2024] Tangerine - Christian McBride Live Session
-[10/2024] Dissolved Girl - Massive Attack and Beginners Falafel - Flying Lotus
-[01/2024] Type Slowly - Pavement and Slowly Typed - Pavement
+[10/2024] Dissolved Girl - Massive Attack &amp; Beginners Falafel - Flying Lotus
+[01/2025] Type Slowly - Pavement &amp; Slowly Typed - Pavement
+[02/2025] Armando&rsquo;s Rhumba - Chick Corea
 ">
 
 
@@ -109,7 +110,7 @@ A meandering list of tunes and tracks that I enjoy, updated ~monthly.
   <meta property="og:site_name" content="Sheridan Feucht">
   <meta property="og:title" content="Sheridan Feucht">
   <meta property="og:description" content="Dan&#39;s Headphones A meandering list of tunes and tracks that I enjoy, updated ~monthly.
-[11/2023] Hallucinations - Keith Jarrett Trio [02/2024] Invitation - Joe Henderson [03/2024] Wednesday Morning, 3 A.M. - Simon &amp; Garfunkel [04/2024] Up Jumped Spring - Christian McBride Big Band [05/2024] Stretto From The Ghetto - Branford Marsalis [06/2024] Stal - C418 [07/2024] Only A Fool Would Say That - Steely Dan [07/2024] Ventura Highway - America [08/2024] Out on the Weekend - Neil Young [09/2024] Tangerine - Christian McBride Live Session [10/2024] Dissolved Girl - Massive Attack and Beginners Falafel - Flying Lotus [01/2024] Type Slowly - Pavement and Slowly Typed - Pavement">
+[11/2023] Hallucinations - Keith Jarrett Trio [02/2024] Invitation - Joe Henderson [03/2024] Wednesday Morning, 3 A.M. - Simon &amp; Garfunkel [04/2024] Up Jumped Spring - Christian McBride Big Band [05/2024] Stretto From The Ghetto - Branford Marsalis [06/2024] Stal - C418 [07/2024] Only A Fool Would Say That - Steely Dan [07/2024] Ventura Highway - America [08/2024] Out on the Weekend - Neil Young [09/2024] Tangerine - Christian McBride Live Session [10/2024] Dissolved Girl - Massive Attack &amp; Beginners Falafel - Flying Lotus [01/2025] Type Slowly - Pavement &amp; Slowly Typed - Pavement [02/2025] Armando’s Rhumba - Chick Corea">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
 
@@ -117,7 +118,7 @@ A meandering list of tunes and tracks that I enjoy, updated ~monthly.
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Sheridan Feucht">
   <meta name="twitter:description" content="Dan&#39;s Headphones A meandering list of tunes and tracks that I enjoy, updated ~monthly.
-[11/2023] Hallucinations - Keith Jarrett Trio [02/2024] Invitation - Joe Henderson [03/2024] Wednesday Morning, 3 A.M. - Simon &amp; Garfunkel [04/2024] Up Jumped Spring - Christian McBride Big Band [05/2024] Stretto From The Ghetto - Branford Marsalis [06/2024] Stal - C418 [07/2024] Only A Fool Would Say That - Steely Dan [07/2024] Ventura Highway - America [08/2024] Out on the Weekend - Neil Young [09/2024] Tangerine - Christian McBride Live Session [10/2024] Dissolved Girl - Massive Attack and Beginners Falafel - Flying Lotus [01/2024] Type Slowly - Pavement and Slowly Typed - Pavement">
+[11/2023] Hallucinations - Keith Jarrett Trio [02/2024] Invitation - Joe Henderson [03/2024] Wednesday Morning, 3 A.M. - Simon &amp; Garfunkel [04/2024] Up Jumped Spring - Christian McBride Big Band [05/2024] Stretto From The Ghetto - Branford Marsalis [06/2024] Stal - C418 [07/2024] Only A Fool Would Say That - Steely Dan [07/2024] Ventura Highway - America [08/2024] Out on the Weekend - Neil Young [09/2024] Tangerine - Christian McBride Live Session [10/2024] Dissolved Girl - Massive Attack &amp; Beginners Falafel - Flying Lotus [01/2025] Type Slowly - Pavement &amp; Slowly Typed - Pavement [02/2025] Armando’s Rhumba - Chick Corea">
 
 
 
@@ -249,8 +250,9 @@ A meandering list of tunes and tracks that I enjoy, updated ~monthly.
 <li>[07/2024] <a href="https://www.youtube.com/watch?v=tnV7dTXlXxs">Ventura Highway - America</a></li>
 <li>[08/2024] <a href="https://www.youtube.com/watch?v=t4ywIPrewpg">Out on the Weekend - Neil Young</a></li>
 <li>[09/2024] <a href="https://www.youtube.com/watch?v=7ci7oJIkP2Q">Tangerine - Christian McBride Live Session</a></li>
-<li>[10/2024] <a href="https://www.youtube.com/watch?v=ABQjT6gDKu0">Dissolved Girl - Massive Attack</a> and <a href="https://www.youtube.com/watch?v=fS7XPtFTvb8">Beginners Falafel - Flying Lotus</a></li>
-<li>[01/2024] <a href="https://www.youtube.com/watch?v=WMDWPH4oKwo">Type Slowly - Pavement</a> and <a href="https://www.youtube.com/watch?v=K14qg9E9SoE">Slowly Typed - Pavement</a></li>
+<li>[10/2024] <a href="https://www.youtube.com/watch?v=ABQjT6gDKu0">Dissolved Girl - Massive Attack</a> &amp; <a href="https://www.youtube.com/watch?v=fS7XPtFTvb8">Beginners Falafel - Flying Lotus</a></li>
+<li>[01/2025] <a href="https://www.youtube.com/watch?v=WMDWPH4oKwo">Type Slowly - Pavement</a> &amp; <a href="https://www.youtube.com/watch?v=K14qg9E9SoE">Slowly Typed - Pavement</a></li>
+<li>[02/2025] <a href="https://www.youtube.com/watch?v=9KE_I6d5m9E">Armando&rsquo;s Rhumba - Chick Corea</a></li>
 </ul>
 
         </div>
