changed to ella and louis

--- a/public/books2025/index.html
+++ b/public/books2025/index.html
@@ -20,6 +20,8 @@
 
 
 (Jan) Love in the Time of Cholera - Gabriel García Márquez
+(Jan) Morning and Evening - Jon Fosse
+(March) Pale Fire - Vladimir Nabokov
 ">
 
 
@@ -101,14 +103,14 @@
 <meta property="og:url" content="//localhost:1313/books2025/">
   <meta property="og:site_name" content="Sheridan Feucht">
   <meta property="og:title" content="Sheridan Feucht">
-  <meta property="og:description" content="Books I Read in 2025 (Jan) Love in the Time of Cholera - Gabriel García Márquez">
+  <meta property="og:description" content="Books I Read in 2025 (Jan) Love in the Time of Cholera - Gabriel García Márquez (Jan) Morning and Evening - Jon Fosse (March) Pale Fire - Vladimir Nabokov">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
 
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Sheridan Feucht">
-  <meta name="twitter:description" content="Books I Read in 2025 (Jan) Love in the Time of Cholera - Gabriel García Márquez">
+  <meta name="twitter:description" content="Books I Read in 2025 (Jan) Love in the Time of Cholera - Gabriel García Márquez (Jan) Morning and Evening - Jon Fosse (March) Pale Fire - Vladimir Nabokov">
 
 
 
@@ -235,6 +237,8 @@
 </span>
 </h1><ul>
 <li>(Jan) Love in the Time of Cholera - Gabriel García Márquez</li>
+<li>(Jan) Morning and Evening - Jon Fosse</li>
+<li>(March) Pale Fire - Vladimir Nabokov</li>
 </ul>
 
         </div>
