--- a/public/books2025/index.html
+++ b/public/books2025/index.html
@@ -22,6 +22,7 @@
 (Jan) Love in the Time of Cholera - Gabriel García Márquez
 (Jan) Morning and Evening - Jon Fosse
 (March) Pale Fire - Vladimir Nabokov
+(April) Orality and Literacy - Walter Ong
 ">
 
 
@@ -103,14 +104,14 @@
 <meta property="og:url" content="http://localhost:1313/books2025/">
   <meta property="og:site_name" content="Sheridan Feucht">
   <meta property="og:title" content="Sheridan Feucht">
-  <meta property="og:description" content="Books I Read in 2025 (Jan) Love in the Time of Cholera - Gabriel García Márquez (Jan) Morning and Evening - Jon Fosse (March) Pale Fire - Vladimir Nabokov">
+  <meta property="og:description" content="Books I Read in 2025 (Jan) Love in the Time of Cholera - Gabriel García Márquez (Jan) Morning and Evening - Jon Fosse (March) Pale Fire - Vladimir Nabokov (April) Orality and Literacy - Walter Ong">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
 
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Sheridan Feucht">
-  <meta name="twitter:description" content="Books I Read in 2025 (Jan) Love in the Time of Cholera - Gabriel García Márquez (Jan) Morning and Evening - Jon Fosse (March) Pale Fire - Vladimir Nabokov">
+  <meta name="twitter:description" content="Books I Read in 2025 (Jan) Love in the Time of Cholera - Gabriel García Márquez (Jan) Morning and Evening - Jon Fosse (March) Pale Fire - Vladimir Nabokov (April) Orality and Literacy - Walter Ong">
 
 
 
@@ -273,6 +274,7 @@
 <li>(Jan) Love in the Time of Cholera - Gabriel García Márquez</li>
 <li>(Jan) Morning and Evening - Jon Fosse</li>
 <li>(March) Pale Fire - Vladimir Nabokov</li>
+<li>(April) Orality and Literacy - Walter Ong</li>
 </ul>
 
         </div>
