--- a/public/headphones/index.html
+++ b/public/headphones/index.html
@@ -29,6 +29,7 @@ A meandering list of tunes and tracks that I enjoy, updated ~monthly.
 [01/2025] Type Slowly - Pavement &amp; Slowly Typed - Pavement
 [02/2025] Armando&rsquo;s Rhumba - Chick Corea
 [04/2025] Can&rsquo;t We Be Friends - Ella &amp; Louis
+[06/2025] You&rsquo;re Gonna Make Me Lonesome When You Go - Bob Dylan
 ">
 
 
@@ -111,7 +112,7 @@ A meandering list of tunes and tracks that I enjoy, updated ~monthly.
   <meta property="og:site_name" content="Sheridan Feucht">
   <meta property="og:title" content="Sheridan Feucht">
   <meta property="og:description" content="Dan&#39;s Headphones A meandering list of tunes and tracks that I enjoy, updated ~monthly.
-[11/2023] Hallucinations - Keith Jarrett Trio [02/2024] Invitation - Joe Henderson [03/2024] Wednesday Morning, 3 A.M. - Simon &amp; Garfunkel [04/2024] Up Jumped Spring - Christian McBride Big Band [05/2024] Stretto From The Ghetto - Branford Marsalis [06/2024] Stal - C418 [07/2024] Only A Fool Would Say That - Steely Dan [07/2024] Ventura Highway - America [08/2024] Out on the Weekend - Neil Young [09/2024] Tangerine - Christian McBride Live Session [10/2024] Dissolved Girl - Massive Attack &amp; Beginners Falafel - Flying Lotus [01/2025] Type Slowly - Pavement &amp; Slowly Typed - Pavement [02/2025] Armando’s Rhumba - Chick Corea [04/2025] Can’t We Be Friends - Ella &amp; Louis">
+[11/2023] Hallucinations - Keith Jarrett Trio [02/2024] Invitation - Joe Henderson [03/2024] Wednesday Morning, 3 A.M. - Simon &amp; Garfunkel [04/2024] Up Jumped Spring - Christian McBride Big Band [05/2024] Stretto From The Ghetto - Branford Marsalis [06/2024] Stal - C418 [07/2024] Only A Fool Would Say That - Steely Dan [07/2024] Ventura Highway - America [08/2024] Out on the Weekend - Neil Young [09/2024] Tangerine - Christian McBride Live Session [10/2024] Dissolved Girl - Massive Attack &amp; Beginners Falafel - Flying Lotus [01/2025] Type Slowly - Pavement &amp; Slowly Typed - Pavement [02/2025] Armando’s Rhumba - Chick Corea [04/2025] Can’t We Be Friends - Ella &amp; Louis [06/2025] You’re Gonna Make Me Lonesome When You Go - Bob Dylan">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
 
@@ -119,7 +120,7 @@ A meandering list of tunes and tracks that I enjoy, updated ~monthly.
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Sheridan Feucht">
   <meta name="twitter:description" content="Dan&#39;s Headphones A meandering list of tunes and tracks that I enjoy, updated ~monthly.
-[11/2023] Hallucinations - Keith Jarrett Trio [02/2024] Invitation - Joe Henderson [03/2024] Wednesday Morning, 3 A.M. - Simon &amp; Garfunkel [04/2024] Up Jumped Spring - Christian McBride Big Band [05/2024] Stretto From The Ghetto - Branford Marsalis [06/2024] Stal - C418 [07/2024] Only A Fool Would Say That - Steely Dan [07/2024] Ventura Highway - America [08/2024] Out on the Weekend - Neil Young [09/2024] Tangerine - Christian McBride Live Session [10/2024] Dissolved Girl - Massive Attack &amp; Beginners Falafel - Flying Lotus [01/2025] Type Slowly - Pavement &amp; Slowly Typed - Pavement [02/2025] Armando’s Rhumba - Chick Corea [04/2025] Can’t We Be Friends - Ella &amp; Louis">
+[11/2023] Hallucinations - Keith Jarrett Trio [02/2024] Invitation - Joe Henderson [03/2024] Wednesday Morning, 3 A.M. - Simon &amp; Garfunkel [04/2024] Up Jumped Spring - Christian McBride Big Band [05/2024] Stretto From The Ghetto - Branford Marsalis [06/2024] Stal - C418 [07/2024] Only A Fool Would Say That - Steely Dan [07/2024] Ventura Highway - America [08/2024] Out on the Weekend - Neil Young [09/2024] Tangerine - Christian McBride Live Session [10/2024] Dissolved Girl - Massive Attack &amp; Beginners Falafel - Flying Lotus [01/2025] Type Slowly - Pavement &amp; Slowly Typed - Pavement [02/2025] Armando’s Rhumba - Chick Corea [04/2025] Can’t We Be Friends - Ella &amp; Louis [06/2025] You’re Gonna Make Me Lonesome When You Go - Bob Dylan">
 
 
 
@@ -289,6 +290,7 @@ A meandering list of tunes and tracks that I enjoy, updated ~monthly.
 <li>[01/2025] <a href="https://www.youtube.com/watch?v=WMDWPH4oKwo">Type Slowly - Pavement</a> &amp; <a href="https://www.youtube.com/watch?v=K14qg9E9SoE">Slowly Typed - Pavement</a></li>
 <li>[02/2025] <a href="https://www.youtube.com/watch?v=9KE_I6d5m9E">Armando&rsquo;s Rhumba - Chick Corea</a></li>
 <li>[04/2025] <a href="https://www.youtube.com/watch?v=wiLIV3H0q-Y">Can&rsquo;t We Be Friends - Ella &amp; Louis</a></li>
+<li>[06/2025] <a href="https://www.youtube.com/watch?v=Claf8E18eLs">You&rsquo;re Gonna Make Me Lonesome When You Go - Bob Dylan</a></li>
 </ul>
 
         </div>
