--- a/public/index.html
+++ b/public/index.html
@@ -243,7 +243,7 @@
     <div id="pics-of-me">
         
         
-        <img src="/peabodyessex.png" width="355px" alt="All the Flowers Are for Me by Anila Quayyum Agha at the Peabody Essex Museum">
+        <img src="/ferry.jpeg" width="355px" alt="On the ferry to Martha's Vineyard during CBMM 2024 Summer School.">
         <img src="/eclipse.jpg" width="355px" alt="Presenting at the Bau lab's eclipse retreat in 2024">
     </div>
 
@@ -265,7 +265,7 @@
     <p>Email me at: <tt>feucht.s[at]northeastern.edu</tt></p>
 
     <br> 
-    <i><a href="/headphones">What's in my headphones:</a></i> <a href="https://www.youtube.com/watch?v=wiLIV3H0q-Y">Can't We Be Friends - Ella & Louis</a>
+    <i><a href="/headphones">What's in my headphones:</a></i> <a href="https://www.youtube.com/watch?v=Claf8E18eLs">You're Gonna Make Me Lonesome When You Go - Bob Dylan</a>
 
     </div>
 
