--- a/public/books2025/index.html
+++ b/public/books2025/index.html
@@ -23,6 +23,8 @@
 (Jan) Morning and Evening - Jon Fosse
 (March) Pale Fire - Vladimir Nabokov
 (April) Orality and Literacy - Walter Ong
+(May) Syntactic Structures - Noam Chomsky
+(June) How to Write About Contemporary Art - Gilda Williams
 ">
 
 
@@ -104,14 +106,14 @@
 <meta property="og:url" content="http://localhost:1313/books2025/">
   <meta property="og:site_name" content="Sheridan Feucht">
   <meta property="og:title" content="Sheridan Feucht">
-  <meta property="og:description" content="Books I Read in 2025 (Jan) Love in the Time of Cholera - Gabriel García Márquez (Jan) Morning and Evening - Jon Fosse (March) Pale Fire - Vladimir Nabokov (April) Orality and Literacy - Walter Ong">
+  <meta property="og:description" content="Books I Read in 2025 (Jan) Love in the Time of Cholera - Gabriel García Márquez (Jan) Morning and Evening - Jon Fosse (March) Pale Fire - Vladimir Nabokov (April) Orality and Literacy - Walter Ong (May) Syntactic Structures - Noam Chomsky (June) How to Write About Contemporary Art - Gilda Williams">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
 
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Sheridan Feucht">
-  <meta name="twitter:description" content="Books I Read in 2025 (Jan) Love in the Time of Cholera - Gabriel García Márquez (Jan) Morning and Evening - Jon Fosse (March) Pale Fire - Vladimir Nabokov (April) Orality and Literacy - Walter Ong">
+  <meta name="twitter:description" content="Books I Read in 2025 (Jan) Love in the Time of Cholera - Gabriel García Márquez (Jan) Morning and Evening - Jon Fosse (March) Pale Fire - Vladimir Nabokov (April) Orality and Literacy - Walter Ong (May) Syntactic Structures - Noam Chomsky (June) How to Write About Contemporary Art - Gilda Williams">
 
 
 
@@ -275,6 +277,8 @@
 <li>(Jan) Morning and Evening - Jon Fosse</li>
 <li>(March) Pale Fire - Vladimir Nabokov</li>
 <li>(April) Orality and Literacy - Walter Ong</li>
+<li>(May) Syntactic Structures - Noam Chomsky</li>
+<li>(June) How to Write About Contemporary Art - Gilda Williams</li>
 </ul>
 
         </div>
