started work on rerereading

--- a/public/syllogisms/index.html
+++ b/public/syllogisms/index.html
@@ -20,7 +20,7 @@
 
 April 23, 2025
 
-(I think that we overvalue logical reasoning when it comes to measuring &#34;intelligence.&#34;)
+I think that we overvalue logical reasoning when it comes to measuring &#34;intelligence.&#34;
 
 What do we mean by intelligence in the context of cognitive science and AI? One thing that often comes to mind is logical reasoning: deriving conclusions from a set of axioms and rules, or thinking through syllogisms like &ldquo;all cats are mammals, all mammals are warm-blooded, therefore all cats are warm-blooded.&rdquo;">
 
@@ -104,7 +104,7 @@ What do we mean by intelligence in the context of cognitive science and AI? One 
   <meta property="og:site_name" content="Sheridan Feucht">
   <meta property="og:title" content="Sheridan Feucht">
   <meta property="og:description" content="Solving Syllogisms is Not Intelligence April 23, 2025
-(I think that we overvalue logical reasoning when it comes to measuring &#34;intelligence.&#34;) What do we mean by intelligence in the context of cognitive science and AI? One thing that often comes to mind is logical reasoning: deriving conclusions from a set of axioms and rules, or thinking through syllogisms like “all cats are mammals, all mammals are warm-blooded, therefore all cats are warm-blooded.”">
+I think that we overvalue logical reasoning when it comes to measuring &#34;intelligence.&#34; What do we mean by intelligence in the context of cognitive science and AI? One thing that often comes to mind is logical reasoning: deriving conclusions from a set of axioms and rules, or thinking through syllogisms like “all cats are mammals, all mammals are warm-blooded, therefore all cats are warm-blooded.”">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
 
@@ -112,7 +112,7 @@ What do we mean by intelligence in the context of cognitive science and AI? One 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Sheridan Feucht">
   <meta name="twitter:description" content="Solving Syllogisms is Not Intelligence April 23, 2025
-(I think that we overvalue logical reasoning when it comes to measuring &#34;intelligence.&#34;) What do we mean by intelligence in the context of cognitive science and AI? One thing that often comes to mind is logical reasoning: deriving conclusions from a set of axioms and rules, or thinking through syllogisms like “all cats are mammals, all mammals are warm-blooded, therefore all cats are warm-blooded.”">
+I think that we overvalue logical reasoning when it comes to measuring &#34;intelligence.&#34; What do we mean by intelligence in the context of cognitive science and AI? One thing that often comes to mind is logical reasoning: deriving conclusions from a set of axioms and rules, or thinking through syllogisms like “all cats are mammals, all mammals are warm-blooded, therefore all cats are warm-blooded.”">
 
 
 
@@ -288,7 +288,7 @@ What do we mean by intelligence in the context of cognitive science and AI? One 
 </span>
 </h1><p>April 23, 2025</p>
 <span style="color:gray">
-<i>(I think that we overvalue logical reasoning when it comes to measuring "intelligence.")</i>
+<i>I think that we overvalue logical reasoning when it comes to measuring "intelligence."</i>
 </span>
 <p>What do we mean by <em>intelligence</em> in the context of cognitive science and AI? One thing that often comes to mind is logical reasoning: deriving conclusions from a set of axioms and rules, or thinking through syllogisms like <em>&ldquo;all cats are mammals, all mammals are warm-blooded, therefore all cats are warm-blooded.&rdquo;</em></p>
 <p>Until recently, I thought of structured reasoning tasks as central to human (and by extension machine) intelligence. It seemed almost obvious that a &ldquo;truly&rdquo; intelligent system would encode abstract notions of, e.g., <a href="https://arxiv.org/abs/2310.09612">same versus different,</a> and that such a system would have absolutely no trouble with syllogistic tasks. I don&rsquo;t think this is an unpopular opinion: critics of LLMs assert that logical tasks are <a href="https://garymarcus.substack.com/p/llms-dont-do-formal-reasoning-and">essential to &ldquo;true&rdquo; general intelligence</a>. Some go on to claim that this type of reasoning is fundamentally incompatible with probablistic next-token prediction.</p>
@@ -303,13 +303,13 @@ What do we mean by intelligence in the context of cognitive science and AI? One 
 &ldquo;There are different sorts of bears.&rdquo; <br>
 <strong>(The syllogism is repeated.)</strong> <br>
 &ldquo;I don&rsquo;t know. I&rsquo;ve seen a black bear. I&rsquo;ve never seen any others&hellip; each locality has its own animals: if it&rsquo;s white, they will be white; if it&rsquo;s yellow, they will be yellow.&rdquo; <br>
-<strong>But what kind of bears are there in Novaya Zemlya?</strong>*<br>
+<strong>But what kind of bears are there in Novaya Zemlya?</strong><br>
 &ldquo;We always speak only of what we see, we don&rsquo;t talk about what we haven&rsquo;t seen.&quot;<br>
 <strong>But what do my words imply? (The syllogism is repeated.)</strong><br>
 &ldquo;Well, it&rsquo;s like this: our tsar isn&rsquo;t like yours, and yours isn&rsquo;t like ours. Your words can be answered only by someone who was there, and if a person wasn&rsquo;t there he can&rsquo;t say anything on the basis of your words.&rdquo; <br></p>
 </blockquote>
 <p>Luria presents illiterate Uzbeks with many more logical puzzles, which they also seem to reject. When shown drawings of an axe, a saw, a hatchet, and a log, and asked to choose the odd one out, a 25-year-old illiterate respondent said: &ldquo;They&rsquo;re all alike. The saw will saw the log and the hatchet will chop it into small pieces. If one of these has to go, I&rsquo;d throw out the hatchet. It doesn&rsquo;t do as good a job as a saw.&rdquo; Literate respondents, on the other hand, would almost always discard the log, with the rationale that the three tools should be grouped together.</p>
-<p>Regardless of the underlying explanation for this behavior, I find these interview responses thrilling to read. There are a lot of hypotheses for why these people were so resistant to such logic-based tasks (e.g., Ong points out that peasants who had learned to write were more likely to entertain Luria&rsquo;s syllogisms), but there is no reason to believe that regular people born in the Uzbek SSR and randomly selected for this study were any more or less &ldquo;intelligent&rdquo; than individuals drawn from some other population. Clearly, abstract reasoning tasks like deduction and categorization are <em>not</em> universal across humans—and these Uzbek farmers were getting along just fine without much care for them!</p>
+<p>Regardless of the underlying explanation for this behavior, I find these interview responses thrilling to read. There are a lot of hypotheses for why these people were so resistant to such logic-based tasks (e.g., Ong points out that people who had learned to write were more likely to entertain Luria&rsquo;s syllogisms), but there is no reason to believe that regular people born in the Uzbek SSR and randomly selected for this study were any more or less &ldquo;intelligent&rdquo; than individuals drawn from some other population. Clearly, abstract reasoning tasks like deduction and categorization are <em>not</em> universal across humans—and these Uzbek farmers were getting along just fine without much care for them!</p>
 <h3 id="some-sympathy" >Some Sympathy
 <span>
     <a href="#some-sympathy">
@@ -323,7 +323,7 @@ What do we mean by intelligence in the context of cognitive science and AI? One 
 <strong>Well, which of you is right?</strong><br>
 &ldquo;What the cock knows how to do, he does. What I know, I say, and nothing beyond that!&rdquo;</p>
 </blockquote>
-<p>Reading the transcripts of these interviews, it seems to me that these questions are just frustratingly uninteresting to the interviewed subjects, who were not used to contrived tests of formal reasoning in classroom settings. It&rsquo;s not unreasonable to respond this way if you aren&rsquo;t used to separating a word problem from the world that it is embedded in (sequestering it away in a little <a href="https://en.wikipedia.org/wiki/Closure_(computer_programming)">closure</a>).</p>
+<p>Reading the transcripts of these interviews, it seems to me that these questions are just frustratingly uninteresting to the interviewed subjects, who were not used to contrived tests of formal reasoning in classroom settings. It&rsquo;s not unreasonable to respond this way if you aren&rsquo;t used to separating a word problem from the world that it is embedded in.</p>
 <p>Here&rsquo;s an example that might make you more sympathetic to the Uzbek nomads. What valid inference can you make based on the following statements (<a href="https://modeltheory.org/papers/1989suppression.pdf">Byrne, 1989</a>)?</p>
 <!-- http://repo.darmajaya.ac.id/4379/1/Computational%20logic%20and%20human%20thinking%20_%20how%20to%20be%20artificially%20intelligent%20%28%20PDFDrive%20%29.pdf
 https://modeltheory.org/papers/1989suppression.pdf -->
