--- a/public/headphones/index.html
+++ b/public/headphones/index.html
@@ -32,6 +32,7 @@ A meandering list of tunes and tracks that I enjoy, updated ~monthly.
 [06/2025] You&rsquo;re Gonna Make Me Lonesome When You Go - Bob Dylan
 [07/2025] Vampire in the Corner - Magdalena Bay
 [09/2025] Sunset - McCoy Tyner
+[11/2025] King Harvest (Has Surely Come) - The Band
 ">
 
 
@@ -114,7 +115,7 @@ A meandering list of tunes and tracks that I enjoy, updated ~monthly.
   <meta property="og:site_name" content="Sheridan Feucht">
   <meta property="og:title" content="Sheridan Feucht">
   <meta property="og:description" content="Dan&#39;s Headphones A meandering list of tunes and tracks that I enjoy, updated ~monthly.
-[11/2023] Hallucinations - Keith Jarrett Trio [02/2024] Invitation - Joe Henderson [03/2024] Wednesday Morning, 3 A.M. - Simon &amp; Garfunkel [04/2024] Up Jumped Spring - Christian McBride Big Band [05/2024] Stretto From The Ghetto - Branford Marsalis [06/2024] Stal - C418 [07/2024] Only A Fool Would Say That - Steely Dan [07/2024] Ventura Highway - America [08/2024] Out on the Weekend - Neil Young [09/2024] Tangerine - Christian McBride Live Session [10/2024] Dissolved Girl - Massive Attack &amp; Beginners Falafel - Flying Lotus [01/2025] Type Slowly - Pavement &amp; Slowly Typed - Pavement [02/2025] Armando’s Rhumba - Chick Corea [04/2025] Can’t We Be Friends - Ella &amp; Louis [06/2025] You’re Gonna Make Me Lonesome When You Go - Bob Dylan [07/2025] Vampire in the Corner - Magdalena Bay [09/2025] Sunset - McCoy Tyner">
+[11/2023] Hallucinations - Keith Jarrett Trio [02/2024] Invitation - Joe Henderson [03/2024] Wednesday Morning, 3 A.M. - Simon &amp; Garfunkel [04/2024] Up Jumped Spring - Christian McBride Big Band [05/2024] Stretto From The Ghetto - Branford Marsalis [06/2024] Stal - C418 [07/2024] Only A Fool Would Say That - Steely Dan [07/2024] Ventura Highway - America [08/2024] Out on the Weekend - Neil Young [09/2024] Tangerine - Christian McBride Live Session [10/2024] Dissolved Girl - Massive Attack &amp; Beginners Falafel - Flying Lotus [01/2025] Type Slowly - Pavement &amp; Slowly Typed - Pavement [02/2025] Armando’s Rhumba - Chick Corea [04/2025] Can’t We Be Friends - Ella &amp; Louis [06/2025] You’re Gonna Make Me Lonesome When You Go - Bob Dylan [07/2025] Vampire in the Corner - Magdalena Bay [09/2025] Sunset - McCoy Tyner [11/2025] King Harvest (Has Surely Come) - The Band">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
 
@@ -122,7 +123,7 @@ A meandering list of tunes and tracks that I enjoy, updated ~monthly.
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Sheridan Feucht">
   <meta name="twitter:description" content="Dan&#39;s Headphones A meandering list of tunes and tracks that I enjoy, updated ~monthly.
-[11/2023] Hallucinations - Keith Jarrett Trio [02/2024] Invitation - Joe Henderson [03/2024] Wednesday Morning, 3 A.M. - Simon &amp; Garfunkel [04/2024] Up Jumped Spring - Christian McBride Big Band [05/2024] Stretto From The Ghetto - Branford Marsalis [06/2024] Stal - C418 [07/2024] Only A Fool Would Say That - Steely Dan [07/2024] Ventura Highway - America [08/2024] Out on the Weekend - Neil Young [09/2024] Tangerine - Christian McBride Live Session [10/2024] Dissolved Girl - Massive Attack &amp; Beginners Falafel - Flying Lotus [01/2025] Type Slowly - Pavement &amp; Slowly Typed - Pavement [02/2025] Armando’s Rhumba - Chick Corea [04/2025] Can’t We Be Friends - Ella &amp; Louis [06/2025] You’re Gonna Make Me Lonesome When You Go - Bob Dylan [07/2025] Vampire in the Corner - Magdalena Bay [09/2025] Sunset - McCoy Tyner">
+[11/2023] Hallucinations - Keith Jarrett Trio [02/2024] Invitation - Joe Henderson [03/2024] Wednesday Morning, 3 A.M. - Simon &amp; Garfunkel [04/2024] Up Jumped Spring - Christian McBride Big Band [05/2024] Stretto From The Ghetto - Branford Marsalis [06/2024] Stal - C418 [07/2024] Only A Fool Would Say That - Steely Dan [07/2024] Ventura Highway - America [08/2024] Out on the Weekend - Neil Young [09/2024] Tangerine - Christian McBride Live Session [10/2024] Dissolved Girl - Massive Attack &amp; Beginners Falafel - Flying Lotus [01/2025] Type Slowly - Pavement &amp; Slowly Typed - Pavement [02/2025] Armando’s Rhumba - Chick Corea [04/2025] Can’t We Be Friends - Ella &amp; Louis [06/2025] You’re Gonna Make Me Lonesome When You Go - Bob Dylan [07/2025] Vampire in the Corner - Magdalena Bay [09/2025] Sunset - McCoy Tyner [11/2025] King Harvest (Has Surely Come) - The Band">
 
 
 
@@ -308,6 +309,7 @@ A meandering list of tunes and tracks that I enjoy, updated ~monthly.
 <li>[06/2025] <a href="https://www.youtube.com/watch?v=Claf8E18eLs">You&rsquo;re Gonna Make Me Lonesome When You Go - Bob Dylan</a></li>
 <li>[07/2025] <a href="https://www.youtube.com/watch?v=q4KYYRzFUzE">Vampire in the Corner - Magdalena Bay</a></li>
 <li>[09/2025] <a href="https://www.youtube.com/watch?v=1XtUK5Boy7o">Sunset - McCoy Tyner</a></li>
+<li>[11/2025] <a href="https://www.youtube.com/watch?v=TaKD1Vdarnw">King Harvest (Has Surely Come) - The Band</a></li>
 </ul>
 
         </div>
