--- a/public/index.html
+++ b/public/index.html
@@ -277,7 +277,7 @@
 
     
     <hr>
-    <i><a href="/headphones">What's in my headphones:</a></i> <a href="https://www.youtube.com/watch?v=1XtUK5Boy7o">Sunset - McCoy Tyner</a> (make sure to listen with headphones)
+    <i><a href="/headphones">What's in my headphones:</a></i> <a href="https://www.youtube.com/watch?v=TaKD1Vdarnw">King Harvest (Has Surely Come) - The Band</a>
 
     </div>
 
