--- a/public/geometry/index.html
+++ b/public/geometry/index.html
@@ -329,12 +329,10 @@ Let's say your multi-dimensional feature $\bf f$ was dimension $d_f=2$ but to yo
 <ol>
 <li>Take the top-$k$ principal component directions of hidden states at the &ldquo;Monday&rdquo; position (pretty sure this position) across all the prompts and project onto there first.</li>
 <li>Then train a linear probe $\bf P$ in that space that maps from $k$ to 2 dimensions, trained to correspond to <tt>circle</tt>($\alpha$) &ndash; e.g. for weekdays <tt>circle</tt>$(\alpha)=[\cos(2\pi\alpha/7), \sin(2\pi\alpha/7)]$.</li>
-<li>To intervene on &ldquo;Monday&rdquo; and make it look like &ldquo;Wednesday&rdquo;, they just discard &ldquo;Monday.&rdquo; Start with mean over prompts $\overline{x_{i,l}}$. Project that onto the circle with $\textbf{PW}_{i,l}$ and then calculate offset from <tt>circle</tt>(Wednesday). Then project that offset back to model space with $\textbf{W}^T_{i,l}\textbf{P}^+$ and add back to the mean to get final activation.</li>
+<li>To intervene on &ldquo;Monday&rdquo; and make it look like &ldquo;Wednesday&rdquo;, they just discard &ldquo;Monday.&rdquo; I am confused about how exactly this intervention works, because their Equation 6 seems wrong (you can&rsquo;t calculate <tt>circle</tt>$(\alpha_{j&rsquo;}) - \overline{x_{i,l}}$ directly because they are different dimensions). Equation 7 doesn&rsquo;t clarify, it seems to have a missing parenthesis.</li>
 </ol>
-<p>They&rsquo;re not doing a patch between two examples, but &ldquo;constructing&rdquo; a new activation based on offset from the mean. [TODO FIX THIS]
-$$x_{i,l}^{j*}=\overline{x_{i,l}}-\textbf{PW}_{i,l}\overline{x_{i,l}}+$$
-Really what it is is they are subtracting whatever is currently in there ____.
-It&rsquo;s cool because you can basically just choose what index of the week you want and then feed it into the intervention. Josh Engels mentions in the talk that the intervention only works if you ablate out everything else that&rsquo;s not in the PCA; I&rsquo;m not exactly sure what he means here, probably the fact that you can&rsquo;t actually patch between individual examples?</p>
+<!-- Start with mean over prompts $\overline{x_{i,l}}$. Project that onto the circle with $\textbf{PW}_{i,l}$ and then calculate offset from <tt>circle</tt>(Wednesday). Then project that offset back to model space with $\textbf{W}^T\_{i,l}\textbf{P}^+$ and add back to the mean to get final activation.  -->
+<p>Josh Engels mentions in the talk that the intervention only works if you ablate out everything else that&rsquo;s not in the PCA; I&rsquo;m not exactly sure what he means here, probably the fact that they have to mean-ablate everything by using $\overline{x_{i,l}}$ instead of the base activation.</p>
 <h2 id="generic-ideastakeaways" >Generic Ideas/Takeaways
 <span>
     <a href="#generic-ideastakeaways">
@@ -342,8 +340,9 @@ It&rsquo;s cool because you can basically just choose what index of the week you
     </a>
 </span>
 </h2><ul>
+<li>How does the model actually use these circular representations to calculate the answer?</li>
 <li>Some of these facts must be piecewise memorized as well (e.g. Saturday is 1 day after Friday is almost surely memorized) &ndash; probably why they have to ablate all other weekday information.</li>
-<li>If you rotated within the circle subspace for tasks like &ldquo;What holidays are typically on [Thursday]?&rdquo; or &ldquo;What letter does [Thursday] start with?&rdquo; then you&rsquo;d probably see it doesn&rsquo;t affect anything. Presumably lots of weekday embedding information is unrelated to circles.</li>
+<li>Presumably lots of weekday embedding information is unrelated to circles &ndash; if you rotated within the circle subspace for tasks like &ldquo;What holidays are typically on [Thursday]?&rdquo; or &ldquo;What letter does [Thursday] start with?&rdquo; then you&rsquo;d probably see it doesn&rsquo;t affect anything.</li>
 <li>It still worries me to think about multiple circles happening at once. If you have six orthogonal 2D circles, could that just be some alternate formulation of an n-dimensional subspace?</li>
 </ul>
 
