--- a/public/geometry/index.html
+++ b/public/geometry/index.html
@@ -345,6 +345,22 @@ Let's say your multi-dimensional feature $\bf f$ was dimension $d_f=2$ but to yo
 <li>Presumably lots of weekday embedding information is unrelated to circles &ndash; if you rotated within the circle subspace for tasks like &ldquo;What holidays are typically on [Thursday]?&rdquo; or &ldquo;What letter does [Thursday] start with?&rdquo; then you&rsquo;d probably see it doesn&rsquo;t affect anything.</li>
 <li>It still worries me to think about multiple circles happening at once. If you have six orthogonal 2D circles, could that just be some alternate formulation of an n-dimensional subspace?</li>
 </ul>
+<h1 id="when-models-manipulate-manifolds--linebreaks-gurnee-et-al-2025" >When Models Manipulate Manifolds / Linebreaks (Gurnee et al., 2025)
+<span>
+    <a href="#when-models-manipulate-manifolds--linebreaks-gurnee-et-al-2025">
+        <svg viewBox="0 0 28 23" height="100%" width="19" xmlns="http://www.w3.org/2000/svg"><path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71" fill="none" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2"/><path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71" fill="none" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2"/></svg>
+    </a>
+</span>
+</h1><p>They find 1-dimensional feature manifolds embedded in low-dimensional subspaces for: num. characters in a token, num. characters in current line, overall line width constraint, num characters <em>remaining</em> in the current line.</p>
+<ul>
+<li>It wouldn&rsquo;t really make sense to dedicate an entire 1D subspace to num characters in current line, because then you&rsquo;re wasting that entire dimension if you&rsquo;re in a doc that doesn&rsquo;t have linebreaks. This is really strong evidence for superposition; as they note, a ring structure implies that there is superposition/interference in that representation.</li>
+</ul>
+<p>They find a bunch of features that activate on a <a href="https://transformer-circuits.pub/2025/linebreaks/index.html#char-count">range of given line widths</a>. Since two are usually active at a time, they imagine curves connecting all these features. If they take PCA across 150 different line width averages for Layer 2, they find a 6-dimensional subspace that explains 95% of the variance across line width averages. They can also reconstruct the activations <em>only</em> using the SAE features above, and the curves track each other fairly closely.</p>
+<ul>
+<li>This is really interesting because there is no human-intuitive reason why line widths would have to be represented as a curve, right? Unless there was something about a 60-length line that nicely parallels a 30-length line? This really might be an artifact of superposition, because we don&rsquo;t want to use up an entire dimension, so we snake it around like so; probably because you&rsquo;re unlikely to confuse 60 and 30 anyway(?)</li>
+<li>Q: do all of their averaged-line-width features come from tokens within documents with a max line width of 150, or do they come from different documents with different <em>max</em> line widths?</li>
+<li>If we were trying to find this using some geometric DAS, why would we assume we&rsquo;re looking for a curved manifold?</li>
+</ul>
 
         </div>
         
